# Beast

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTICE  README.md  beast.build  main.cpp  test.txt
.github/workflows/: build.yml  mac_build.yml  ubuntu_build.yml  windows_build.yml
src/FileDependency/: CMakeLists.txt  Filesystem.cpp  Filesystem.h  Graph.cpp  Graph.h  Makefile
src/Logger/: CMakeLists.txt  Error.cpp  Error.h  Logger.cpp  Logger.h  Makefile
src/Parallelizer/: CMakeLists.txt  Makefile  TaskScheduler.cpp  TaskScheduler.h
src/Parallelizer/bin_int/: TaskScheduler.d
src/Parser/: .ninja_log  CMakeLists.txt  DepFileParser.cpp  DepFileParser.h  Makefile  Memory.cpp  Memory.h  beast.build  build.ninja  g.py  libsparser.dylib  location.hh  main.lpp  main.ypp  main2.l  parser.cpp  parser.hpp  scanner.cpp  scanner.h  test  test2.cpp  test2.h  unix_scanner.cpp  unix_scanner.h  variable_type.cpp  variable_type.h  win_scanner.cpp  win_scanner.h
src/Parser/ninja_test/: .ninja_log  A.cpp  Makefile  build.ninja
src/ShellInterface/: CMakeLists.txt  Executor.cpp  Executor.h  Makefile  Process.cpp  Process.h  Shell.cpp  Shell.h
